# credit-card-finder

./: .dockerignore  .gitignore  Dockerfile  config.py  deploy-docker.sh  docker-compose.yml  mcp_handlers.py  pyproject.toml  resources.py  routes.py  schemas.py  server.py  service.py  test_learn_more_results.json  tools.py  widgets.py
.github/: copilot-instructions.md
credit_card_finder/: __init__.py
json/: list_cards.json
json/rates_and_fees/: active_cash.json  attune.json  autograph.json  autograph_journey.json  choice_privileges_mastercard.json  choice_privileges_select_mastercard.json  one_key+_card.json  one_key_card.json  reflect.json
ui/: index.html  package-lock.json  package.json
ui/mock-data/: cards.json  compare-cards.json
ui/src/: App.js
ui/src/CardCompare/: CardCompare.jsx  CardCompare.styles.jsx
ui/src/CardDetail/: CardDetail.jsx
ui/src/CardList/: ApplicationForm.jsx  ApplyModal.jsx  CardList.jsx  CardList.styles.jsx  FeatureBenefits.jsx  RatesFees.jsx  RewardsBenefits.jsx
