[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "credit-card-finder"
version = "1.0.0"
description = "Wells Fargo credit card finder service - helps users discover and compare the best Wells Fargo credit cards based on their spending habits, rewards preferences, and financial goals."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.15",
    "backoff>=2.2.1",
    "cachetools>=6.1.0",
    "fastapi>=0.116.1",
    "fastmcp>=2.11.3",
    "httpx>=0.27.0",
    "mcp>=1.16.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "starlette>=0.41.0"
]

[tool.setuptools]
py-modules = ["server", "tools", "widgets"]

